# Open3D_TrueDepth_registration

./: .gitignore  .gitmodules  LICENSE  README.md  run.py
cpp/: CMakeLists.txt  pose_graph.cpp
lib/: image_depth.py  process3d.py  rigid_transform_3D.py
